--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "lint:repo": "bunx sherif@latest",
     "lint:repo:fix": "bunx sherif@latest --fix",
     "typecheck": "turbo typecheck",
-    "prepare": "husky"
+    "prepare": "husky",
+    "gen": "turbo gen --config 'turbo/generator/config.ts'"
   },
   "lint-staged": {
     "*": ["cspell --no-must-find-files", "biome format --write"],
@@ -39,6 +40,7 @@
     "@biomejs/biome": "1.8.3",
     "@manypkg/cli": "^0.21.4",
     "@t3-oss/env-nextjs": "^0.11.1",
+    "@turbo/gen": "^2.1.1",
     "cspell": "^8.11.0",
     "git-cz": "^4.9.0",
     "lint-staged": "^15.2.7",
