--- a/cspell.config.yaml
+++ b/cspell.config.yaml
@@ -11,6 +11,12 @@ ignorePaths:
   - package-lock.json
   - package.json
 words:
+  - asynciterable
+  - Tinybird
+  - datasource
+  - TINYBIRD
+  - tinybird
+  - chronark
   - supabase
   - plpgsql
   - ossp
