--- a/package.json
+++ b/package.json
@@ -38,6 +38,11 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.8.3",
+    "@changesets/cli": "^2.27.7",
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
+    "@commitlint/cz-commitlint": "^19.2.0",
+    "@commitlint/types": "^19.0.3",
     "@manypkg/cli": "^0.21.4",
     "@t3-oss/env-nextjs": "^0.11.1",
     "@turbo/gen": "^2.1.1",
