--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "v1",
   "private": true,
-  "workspaces": ["packages/*", "apps/*", "tooling/*"],
+  "workspaces": ["packages/*", "apps/*", "tooling/*", "services/*"],
   "scripts": {
     "commit": "git-cz",
     "lint:md": "markdownlint \"**/*.md\" --dot --ignore node_modules --ignore .changeset",
