--- a/packages/auth/tsconfig.json
+++ b/packages/auth/tsconfig.json
@@ -1,13 +1,5 @@
 {
-  "compilerOptions": {
-    "target": "es2018",
-    "module": "commonjs",
-    "lib": ["es2018", "dom"],
-    "declaration": true,
-    "outDir": "./dist",
-    "strict": true,
-    "esModuleInterop": true
-  },
-  "include": ["src"],
-  "exclude": ["node_modules", "dist"]
+  "extends": "tsconfig/base.json",
+  "exclude": ["node_modules"],
+  "compilerOptions": {}
 }
