--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -1,11 +1,7 @@
 {
   "name": "@v1/auth",
   "version": "1.0.0",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "scripts": {
-    "build": "tsc"
-  },
+  "main": "src/index.ts",
   "dependencies": {
     "@v1/supabase": "workspace:*",
     "next": "^13.0.0"
