--- a/packages/tinybird/tsconfig.json
+++ b/packages/tinybird/tsconfig.json
@@ -1,14 +1,5 @@
 {
-  "compilerOptions": {
-    "target": "es2018",
-    "lib": ["es2018", "esnext.asynciterable"],
-    "module": "commonjs",
-    "strict": true,
-    "esModuleInterop": true,
-    "outDir": "dist",
-    "declaration": true,
-    "sourceMap": true
-  },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "**/*.spec.ts"]
+  "extends": "tsconfig/base.json",
+  "exclude": ["node_modules"],
+  "compilerOptions": {}
 }
