--- a/packages/stripe/package.json
+++ b/packages/stripe/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@v1/logger": "workspace:*",
     "@v1/supabase": "workspace:*",
+    "@v1/typescript": "workspace:*",
     "stripe": "^12.0.0",
     "next": "^14.0.0",
     "zod": "^3.22.4"
