--- a/packages/tinybird/package.json
+++ b/packages/tinybird/package.json
@@ -2,6 +2,7 @@
   "name": "@v1/tinybird",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "push:datasources": "tb push datasources",
     "push:pipes": "tb push pipes",
@@ -9,6 +10,7 @@
   },
   "dependencies": {
     "@chronark/zod-bird": "^0.3.9",
+    "node-fetch": "^3.3.2",
     "zod": "^3.21.4"
   },
   "devDependencies": {
