--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -12,11 +12,12 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@trigger.dev/sdk": "^3.0.0-beta.56",
     "@v1/analytics": "workspace:*",
+    "@v1/auth": "workspace:*",
     "@v1/kv": "workspace:*",
     "@v1/supabase": "workspace:*",
     "@v1/ui": "workspace:*",
-    "@v1/auth": "workspace:*",
     "dub": "^0.36.5",
     "geist": "^1.3.1",
     "next": "14.2.7",
@@ -26,6 +27,7 @@
     "nuqs": "^1.18.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "trigger.dev": "^1.0.8",
     "zod": "^3.23.8"
   },
   "devDependencies": {
