--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "v1",
+  "name": "typescript-saas-template",
   "private": true,
   "workspaces": ["packages/*", "apps/*", "tooling/*", "services/*"],
   "scripts": {
