--- a/.github/workflows/release-authentication-service.yml
+++ b/.github/workflows/release-authentication-service.yml
@@ -1,11 +1,11 @@
-name: Release Template Service
+name: Release Authentication Service
 
 on:
   push:
     branches:
       - main
     paths:
-      - 'services/account-service/**'
+      - 'services/authentication-service/**'
 
 jobs:
   deploy:
@@ -21,18 +21,18 @@ jobs:
 
       - name: Install dependencies
         run: bun install
-        working-directory: services/account-service
+        working-directory: services/authentication-service
 
       - name: Run tests
         run: bun test
-        working-directory: services/account-service
+        working-directory: services/authentication-service
 
       - name: Build project
         run: bun run build
-        working-directory: services/account-service
+        working-directory: services/authentication-service
 
       - name: Publish to Cloudflare Workers
         uses: cloudflare/wrangler-action@v3
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          workingDirectory: 'services/account-service'
+          workingDirectory: 'services/authentication-service'
